--- a/src/AD419.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/AD419.Mvc/Views/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="React">React</a>
+                        </li>
                     </ul>
                 </div>
             </div>
